// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Resource Shows indication that item has been bookmarked 1`] = `
Array [
  <tr>
    <td>
      <div
        className="resourceDetails-wrapper"
        css={
          Object {
            "map": undefined,
            "name": "1f9ea78",
            "next": undefined,
            "styles": "
  position: relative;
  .resourceDetails {
    position: absolute;
    left: 0;
    max-width: 90vw;
    width: 300px;
    top: 110%;
    left: -0.4025rem;
    background: white;
    border-radius: 5px;
    box-shadow: 2px 2px 12px 1px rgba(0,0,0,0.25);
    padding: 0.805rem;
    z-index: 1000;
    border: 1px solid #e4e4e4;
    &:after {
      content: \\"\\";
      height: 12px;
      width: 12px;
      position: absolute;
      top: 0;
      background: white;
      transform: rotate(-45deg);
      transform-origin: 0 0;
      left: 0.805rem;
      border-right: 1px solid #e4e4e4;
      border-top: 1px solid #e4e4e4;
    }
    &.up {
      top: auto;
      bottom: 110%;
      &:after {
        top: auto;
        bottom: 0;
        transform: rotate(45deg);
        transform-origin: 0 100%;
        border-right: 1px solid #e4e4e4;
        border-bottom: 1px solid #e4e4e4;
        border-top: 0;
      }
    }
    h4 {
      margin: 0;
    }
    p {
      color: black;
    }
    p:last-child {
      margin-bottom: 0.805rem;
    }
    .btn-view {
      padding-right: 0.4025rem;
    }
    button, span {
      display: inline-block;
      font-size: 13px;
    }
    .right {
        float: right;
    }
  }
",
            "toString": [Function],
          }
        }
      >
        <a
          onClick={[Function]}
          rel="noreferrer noopener"
          target="_blank"
        >
          Alligator
        </a>
        <aside
          className="resourceDetails up"
        >
          <h4>
            Alligator
          </h4>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
          <div
            className="controls"
          >
            <a
              className="btn-view"
              rel="noreferrer noopener"
              target="_blank"
            >
              View Now →
            </a>
            <span
              className="right"
            >
              Bookmarked! 
              <button
                className="css-vhv7r1"
                onClick={[Function]}
              >
                Remove
              </button>
            </span>
          </div>
        </aside>
      </div>
    </td>
    <td>
      Article
    </td>
    <td>
      Front-end
    </td>
    <td>
      All
    </td>
  </tr>,
  ")",
]
`;

exports[`Resource renders correctly not toggled 1`] = `
Array [
  <tr>
    <td>
      <div
        className="resourceDetails-wrapper"
        css={
          Object {
            "map": undefined,
            "name": "1f9ea78",
            "next": undefined,
            "styles": "
  position: relative;
  .resourceDetails {
    position: absolute;
    left: 0;
    max-width: 90vw;
    width: 300px;
    top: 110%;
    left: -0.4025rem;
    background: white;
    border-radius: 5px;
    box-shadow: 2px 2px 12px 1px rgba(0,0,0,0.25);
    padding: 0.805rem;
    z-index: 1000;
    border: 1px solid #e4e4e4;
    &:after {
      content: \\"\\";
      height: 12px;
      width: 12px;
      position: absolute;
      top: 0;
      background: white;
      transform: rotate(-45deg);
      transform-origin: 0 0;
      left: 0.805rem;
      border-right: 1px solid #e4e4e4;
      border-top: 1px solid #e4e4e4;
    }
    &.up {
      top: auto;
      bottom: 110%;
      &:after {
        top: auto;
        bottom: 0;
        transform: rotate(45deg);
        transform-origin: 0 100%;
        border-right: 1px solid #e4e4e4;
        border-bottom: 1px solid #e4e4e4;
        border-top: 0;
      }
    }
    h4 {
      margin: 0;
    }
    p {
      color: black;
    }
    p:last-child {
      margin-bottom: 0.805rem;
    }
    .btn-view {
      padding-right: 0.4025rem;
    }
    button, span {
      display: inline-block;
      font-size: 13px;
    }
    .right {
        float: right;
    }
  }
",
            "toString": [Function],
          }
        }
      >
        <a
          onClick={[Function]}
          rel="noreferrer noopener"
          target="_blank"
        >
          Alligator
        </a>
      </div>
    </td>
    <td>
      Article
    </td>
    <td>
      Front-end
    </td>
    <td>
      All
    </td>
  </tr>,
  ")",
]
`;

exports[`Resource renders correctly when toggled 1`] = `
Array [
  <tr>
    <td>
      <div
        className="resourceDetails-wrapper"
        css={
          Object {
            "map": undefined,
            "name": "1f9ea78",
            "next": undefined,
            "styles": "
  position: relative;
  .resourceDetails {
    position: absolute;
    left: 0;
    max-width: 90vw;
    width: 300px;
    top: 110%;
    left: -0.4025rem;
    background: white;
    border-radius: 5px;
    box-shadow: 2px 2px 12px 1px rgba(0,0,0,0.25);
    padding: 0.805rem;
    z-index: 1000;
    border: 1px solid #e4e4e4;
    &:after {
      content: \\"\\";
      height: 12px;
      width: 12px;
      position: absolute;
      top: 0;
      background: white;
      transform: rotate(-45deg);
      transform-origin: 0 0;
      left: 0.805rem;
      border-right: 1px solid #e4e4e4;
      border-top: 1px solid #e4e4e4;
    }
    &.up {
      top: auto;
      bottom: 110%;
      &:after {
        top: auto;
        bottom: 0;
        transform: rotate(45deg);
        transform-origin: 0 100%;
        border-right: 1px solid #e4e4e4;
        border-bottom: 1px solid #e4e4e4;
        border-top: 0;
      }
    }
    h4 {
      margin: 0;
    }
    p {
      color: black;
    }
    p:last-child {
      margin-bottom: 0.805rem;
    }
    .btn-view {
      padding-right: 0.4025rem;
    }
    button, span {
      display: inline-block;
      font-size: 13px;
    }
    .right {
        float: right;
    }
  }
",
            "toString": [Function],
          }
        }
      >
        <a
          onClick={[Function]}
          rel="noreferrer noopener"
          target="_blank"
        >
          Alligator
        </a>
        <aside
          className="resourceDetails "
        >
          <h4>
            Alligator
          </h4>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
          <div
            className="controls"
          >
            <a
              className="btn-view"
              rel="noreferrer noopener"
              target="_blank"
            >
              View Now →
            </a>
            <button
              className="right css-vhv7r1"
              onClick={[Function]}
            >
              Add to bookmarks
            </button>
          </div>
        </aside>
      </div>
    </td>
    <td>
      Article
    </td>
    <td>
      Front-end
    </td>
    <td>
      All
    </td>
  </tr>,
  ")",
]
`;

exports[`Resource renders popover above item when showDetailsAbove prop is true 1`] = `
Array [
  <tr>
    <td>
      <div
        className="resourceDetails-wrapper"
        css={
          Object {
            "map": undefined,
            "name": "1f9ea78",
            "next": undefined,
            "styles": "
  position: relative;
  .resourceDetails {
    position: absolute;
    left: 0;
    max-width: 90vw;
    width: 300px;
    top: 110%;
    left: -0.4025rem;
    background: white;
    border-radius: 5px;
    box-shadow: 2px 2px 12px 1px rgba(0,0,0,0.25);
    padding: 0.805rem;
    z-index: 1000;
    border: 1px solid #e4e4e4;
    &:after {
      content: \\"\\";
      height: 12px;
      width: 12px;
      position: absolute;
      top: 0;
      background: white;
      transform: rotate(-45deg);
      transform-origin: 0 0;
      left: 0.805rem;
      border-right: 1px solid #e4e4e4;
      border-top: 1px solid #e4e4e4;
    }
    &.up {
      top: auto;
      bottom: 110%;
      &:after {
        top: auto;
        bottom: 0;
        transform: rotate(45deg);
        transform-origin: 0 100%;
        border-right: 1px solid #e4e4e4;
        border-bottom: 1px solid #e4e4e4;
        border-top: 0;
      }
    }
    h4 {
      margin: 0;
    }
    p {
      color: black;
    }
    p:last-child {
      margin-bottom: 0.805rem;
    }
    .btn-view {
      padding-right: 0.4025rem;
    }
    button, span {
      display: inline-block;
      font-size: 13px;
    }
    .right {
        float: right;
    }
  }
",
            "toString": [Function],
          }
        }
      >
        <a
          onClick={[Function]}
          rel="noreferrer noopener"
          target="_blank"
        >
          Alligator
        </a>
        <aside
          className="resourceDetails up"
        >
          <h4>
            Alligator
          </h4>
          <div
            dangerouslySetInnerHTML={
              Object {
                "__html": undefined,
              }
            }
          />
          <div
            className="controls"
          >
            <a
              className="btn-view"
              rel="noreferrer noopener"
              target="_blank"
            >
              View Now →
            </a>
            <button
              className="right css-vhv7r1"
              onClick={[Function]}
            >
              Add to bookmarks
            </button>
          </div>
        </aside>
      </div>
    </td>
    <td>
      Article
    </td>
    <td>
      Front-end
    </td>
    <td>
      All
    </td>
  </tr>,
  ")",
]
`;
